correcting pdf transformation to pandas DataFrame

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-distro==1.7.0
-numpy==1.23.3
-pandas==1.5.0
-PyPDF2==2.11.0
-python-dateutil==2.8.2
-pytz==2022.2.1
-six==1.16.0
-tabula-py==2.5.1
-typing-extensions==4.3.0
+distro==1.9.0
+numpy==2.2.1
+pandas==2.2.3
+python-dateutil==2.9.0.post0
+pytz==2024.2
+setuptools==75.6.0
+six==1.17.0
+tabula-py==2.10.0
+tzdata==2024.2
